corregido un error en el archivo de estilos

--- a/estilos/main.css
+++ b/estilos/main.css
@@ -1120,7 +1120,7 @@ nav .nav__nav .nav__menuIcon--close{
 .shop__productLabel-title{
     padding:2px;
 }
-..shop__productLabelContainer{
+.shop__productLabelContainer{
     padding:2px;
 }
 .shop__footer .shop__cartAdd{
